<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.menupoliticas.MenuPoliticasFragment">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreMenu"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            android:paddingTop="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <LinearLayout
                android:id="@+id/container_sexual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vertical_center_guideline">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_sexual"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/sexual"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/pacososexual" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sexual"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_represalias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/vertical_center_guideline"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_represalias"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/represalias"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/prepresalias" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/represalias"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_job_noforzado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vertical_center_guideline"
                app:layout_constraintTop_toBottomOf="@id/container_sexual">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_job_noforzado"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/jobforzado"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/pjobforzado" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/jobforzado"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_infantil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/vertical_center_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_represalias">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_infantil"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/infantil"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/pinfantil" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/infantil"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_politica_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vertical_center_guideline"
                app:layout_constraintTop_toBottomOf="@id/container_job_noforzado">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/buzon"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/buzon" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buzon"
                android:textSize="14sp"
                android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_politica_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/vertical_center_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_infantil">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/libertad"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/libertad2" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/libertad"
                android:textSize="14sp"
                android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_politica_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vertical_center_guideline"
                app:layout_constraintTop_toBottomOf="@id/container_politica_5">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/discriminacion"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/discriminacion" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/discriminacion"
                android:textSize="14sp"
                android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_politica_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/vertical_center_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_politica_6">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/dh"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/libertad" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dh" android:textSize="14sp"
                android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_politica_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_politica_7">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_politica_9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/sanciones"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/sanciones" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sanciones"
                android:textSize="14sp"
                android:textColor="@android:color/black" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>